# rustShell

./: .gitattributes  .gitignore  Cargo.toml  README.md  UI-REWRITE-PLAN.md  build.rs  components.json  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
capabilities/: default.json
docs/: slint-version-plan.md
frontend-src/: file-manager.html  index.html
frontend-src/src/: App.tsx  api.ts  app-entry.tsx  events.ts  file-manager-main.tsx  main.tsx  styles.css
frontend-src/src/components/app/: ActionContextMenu.tsx  AppMenuBar.tsx  AppSelect.tsx  CommandPalette.tsx  DialogPrimitives.tsx  IconButton.tsx  PanelHeader.tsx  WindowControls.tsx  toast.ts
frontend-src/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  menubar.tsx  progress.tsx  scroll-area.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  tooltip.tsx
frontend-src/src/features/dialogs/: AppDialogs.tsx  AppModalDialog.tsx  BatchRenameDialog.tsx  ChmodDialog.tsx  DeleteConfirmDialog.tsx  HostKeyDialog.tsx  KnownHostsDialog.tsx  ProfileDialog.tsx  PropertiesDialog.tsx  QuickDialog.tsx  SecretDialog.tsx  SettingsDialog.tsx  SyncPlanDialog.tsx  TextEditorDialog.tsx  dialogTypes.ts  textEditorModel.ts  useAppModal.ts  useClipboardFallback.ts
frontend-src/src/features/files/: DirectoryCompareSummary.tsx  FileList.tsx  FileManagerShell.tsx  FilePane.tsx  FilePaneChrome.tsx  PathBreadcrumbs.tsx  PermissionControls.tsx  deleteConfirmActions.ts  directoryCompareActions.ts  fileAuditActions.ts  fileCommandClipboardActions.ts  fileCommands.ts  fileFormatters.ts  fileManagerWindow.ts  fileMutationActions.ts  filePaneActionShared.tsx  filePaneActions.tsx  filePaneModel.ts  filePaneTypes.ts  fileReports.ts  fileSelectionClipboardActions.ts  localFilePaneActions.tsx  pathBookmarks.ts  pathUtils.ts  permissions.ts  remoteFilePaneActions.tsx  syncPlanImport.ts  syncPlanTypes.ts  useFilePaneState.ts
frontend-src/src/features/sessions/: ConnectionOverview.tsx  SessionSidebar.tsx  SessionTree.tsx  profileAuth.ts  profileModel.ts  profileProtocol.ts  sessionActions.ts  sessionFolders.ts  useSessionFolders.ts
frontend-src/src/features/shell/: AppTopbar.tsx  WorkspaceLayout.tsx  appBackground.ts  appDefaults.ts  appEvents.ts  appMenus.ts  useAppShellEffects.ts  useTransientScrollbars.ts  useWorkspacePanels.ts  windowDrag.ts
frontend-src/src/features/terminal/: TerminalArea.tsx  TerminalEmptyState.tsx  (+6 more)
frontend-src/src/lib/: browserFiles.ts  math.ts
frontend-src/src/styles/: globals.css
icons/: rustshell-app-icon-64.rgba
scripts/: package.ps1
slint-native-ui/: main.slint  theme.slint
slint-native-ui/components/: widgets.slint
src/: app_facade.rs  lib.rs  main.rs
src/core/: mod.rs  session.rs  settings.rs  sftp.rs  terminal.rs
src/native_slint/: files.rs  mod.rs  runtime.rs  sessions.rs  terminal.rs  view_models.rs
src/services/: mod.rs  sftp_service.rs  ssh.rs  storage.rs  terminal_service.rs
(+6 files in other folders)
